# velox-1

./: CMakeLists.txt  Makefile
scripts/: setup-helper-functions.sh
velox/: CMakeLists.txt
velox/benchmarks/: CMakeLists.txt  QueryBenchmarkBase.cpp  QueryBenchmarkBase.h
velox/buffer/: Buffer.h
velox/connectors/: Connector.cpp  Connector.h
velox/core/: CancelPool.h  PlanNode.h  QueryConfig.h  QueryCtx.h
velox/dwio/: CMakeLists.txt
velox/exec/: Aggregate.cpp  Aggregate.h  AllocationPool.h  CMakeLists.txt  ContainerRowSerde.cpp  Driver.cpp  Driver.h  Exchange.cpp  Exchange.h  ExchangeSource.h  FilterProject.cpp  FilterProject.h  GroupingSet.cpp  GroupingSet.h  HashAggregation.cpp  HashAggregation.h  HashBuild.cpp  HashProbe.cpp  HashProbe.h  HashTable.cpp  HashTable.h  LocalPartition.cpp  LocalPlanner.cpp  Merge.cpp  Merge.h  MergeJoin.cpp  MergeJoin.h  NestedLoopJoinProbe.cpp  NestedLoopJoinProbe.h  Operator.cpp  Operator.h  OperatorUtils.cpp  OperatorUtils.h  OrderBy.cpp  OutputBufferManager.h  PartitionedOutput.cpp  PartitionedOutput.h  PartitionedOutputBufferManager.cpp  PartitionedOutputBufferManager.h  PlanNodeStats.cpp  (+26 more)
velox/expression/: BooleanMix.cpp  CastExpr.cpp  ConjunctExpr.cpp  ControlExpr.cpp  DecodedArgs.h  EvalCtx.cpp  EvalCtx.h  Expr.cpp  Expr.h  ExprCompiler.cpp  FieldReference.cpp  PeeledEncoding.cpp  SimpleFunctionAdapter.h  VectorUdfTypeSystem.h
velox/flag_definitions/: flags.cpp
velox/parse/: CMakeLists.txt  DuckLogicalOperator.h  ExpressionsParser.cpp  QueryPlanner.cpp  QueryPlanner.h
velox/parse/prestosql/: CMakeLists.txt  PrestoSqlErrorHandler.h  PrestoSqlExprTranslator.h
velox/parse/prestosql/tests/: CMakeLists.txt  PrestoSqlParserTest.cpp
(+770 files in other folders)
